--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
 <head>
 <title>je-r's software</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128132722-1"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128132722-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128132722-1');
+</script>
+  
 </head>
 <body style="background-color: #7FFFD4">
 J.E.R.'s software:
