--- a/polyglot/index.html
+++ b/polyglot/index.html
@@ -8,6 +8,18 @@
 <script type="text/javascript" src="js/responsivevoice.js"></script>
 <script type="text/javascript" src="js/polyglot.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128132722-1"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128132722-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-128132722-1');
+</script>
+  
 </head>
 
 <body>
