--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body style="background-color: #7FFFD4">
 J.E.R.'s software:
 <ul>
-<li>under construction
+<li><a href="https://je-r.github.io/polyglot/">Polyglot web app for multiple translation to several languages</a>
 </ul>
 </body>
 </html>
