--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 J.E.R.'s software:
 <ul>
 <li><a href="https://je-r.github.io/cloud-polyglot-translator/">Cloud Polyglot Translator</a>
+  <li><a href="https://je-r.github.io/Excel-Gleaner/">Excel Gleaner</a>
 </ul>
 </body>
 </html>
