--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   
 </head>
 <body style="background-color: #7FFFD4">
+<style>
+  li {
+        width: 25px;
+        height: 25px;
+        border: solid 1px black;
+        display: inline;
+        margin: 0 2px 0 0;
+        float: left;
+}
+</style>
 J.E.R.'s software:
 <ul>
 <li><a href="https://je-r.github.io/cloud-polyglot-translator/">Cloud Polyglot Translator</a>
