--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 </head>
 <body style="background-color: #7FFFD4">
 <style>
-  li {
-        width: 25px;
-        height: 25px;
-        border: solid 1px black;
-        display: inline;
-        margin: 0 2px 0 0;
-        float: left;
+li{
+	padding: 5px 4px 6px 7px;
+  	margin-top: 3px;
+	margin-bottom: 3px;
+}
+li:hover{
+	background-color: yellow;
 }
 </style>
 J.E.R.'s software:
