--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@ li:hover{
 	background-color: yellow;
 }
 </style>
-J.E.R.'s software:
+J.E.R.'s web apps:
 <ul>
 <li><a href="https://je-r.github.io/cloud-polyglot-translator/">Cloud Polyglot Translator</a>
   <li><a href="https://je-r.github.io/Excel-Gleaner/">Excel Gleaner</a>
 </ul>
+Source code of above web apps and J.E.R.'s GitHub profile: 
+	
+	<ul>
+		<li><a href="https://github.com/je-r">https://github.com/je-r</a>
+	</ul>		
 </body>
 </html>
