--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@ li:hover{
 </style>
 J.E.R.'s web apps:
 <ul>
-<li><a href="https://je-r.github.io/cloud-polyglot-translator/">Cloud Polyglot Translator</a>
-  <li><a href="https://je-r.github.io/Excel-Gleaner/">Excel Gleaner</a>
+	<li><a href="https://je-r.github.io/cloud-polyglot-translator/">Cloud Polyglot Translator</a></li>
+	<li><a href="https://je-r.github.io/Excel-Gleaner/">Excel Gleaner</a></li>
 </ul>
+J.E.R.'s books:
+	<ul>
+		<li><a href="https://je-r.github.io/Machine-Learning-Deep-Learning-Handbook/">Machine Learning Deep Learning Handbook</a></li>
+	</ul>
 Source code of above web apps and J.E.R.'s GitHub profile: 
 	
 	<ul>
