--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ J.E.R.'s web apps:
 </ul>
 J.E.R.'s books:
 	<ul>
-		<li><a href="https://je-r.github.io/Machine-Learning-Deep-Learning-Handbook/">Machine Learning Deep Learning Handbook</a></li>
+		<li><a href="https://je-r.github.io/Machine-Learning-Deep-Learning-Handbook/">Machine Learning & Deep Learning Handbook</a></li>
 	</ul>
 Source code of above web apps and J.E.R.'s GitHub profile: 
 	
