--- a/index.html
+++ b/index.html
@@ -3,18 +3,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>je-r's software</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128132722-1"></script>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128132722-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-128132722-1');
-</script>
   
 </head>
 <body style="background-color: #7FFFD4">
@@ -30,19 +18,11 @@ li:hover{
 </style>
 J.E.R.'s web apps:
 <ul>
+	<li><a href="https://je-r.github.io/tensorflow.js/">TensorFlow.js tests</a></li>
 	<li><a href="https://je-r.github.io/cloud-polyglot-translator/">Cloud Polyglot Translator</a></li>
 	<li><a href="https://je-r.github.io/Excel-Gleaner/">Excel Gleaner</a></li>
 </ul>
-J.E.R.'s books:
-	<ul>
-		<li><a href="https://je-r.github.io/ml">
-			interactive and animated
-ENCYCLOPEDIA
-of
-Machine Learning
-and
-Deep Learning</a></li>
-	</ul>
+
 Source code of above web apps and J.E.R.'s GitHub profile: 
 	
 	<ul>
